[gd_scene load_steps=18 format=3 uid="uid://b2ex68ts3llna"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_tuer7"]
[ext_resource type="Material" uid="uid://bg60q3xegdehx" path="res://Effects/Shaders/blink-effect.tres" id="1_vv11l"]
[ext_resource type="Texture2D" uid="uid://do5j4um2nwttx" path="res://Player/sprite.png" id="2_ygmqi"]
[ext_resource type="PackedScene" uid="uid://c78de7vermw86" path="res://Common/hurt_box.tscn" id="3_bh7an"]
[ext_resource type="Shader" path="res://Effects/Shaders/blink-effect.gdshader" id="5_jrqsa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0fsm"]
size = Vector2(28, 8.5)

[sub_resource type="Animation" id="Animation_kqtnn"]
resource_name = "Idle"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_bg7m5"]
resource_name = "JumpDowning"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 49]
}

[sub_resource type="Animation" id="Animation_xekqb"]
resource_name = "JumpUping"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_5lp8i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_clf6f"]
resource_name = "Run"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6daon"]
_data = {
"Idle": SubResource("Animation_kqtnn"),
"JumpDowning": SubResource("Animation_bg7m5"),
"JumpUping": SubResource("Animation_xekqb"),
"RESET": SubResource("Animation_5lp8i"),
"Run": SubResource("Animation_clf6f")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3mygs"]
shader = ExtResource("5_jrqsa")
shader_parameter/active = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ttjog"]
radius = 15.0
height = 36.0

[sub_resource type="Animation" id="Animation_a8dvv"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false]
}

[sub_resource type="Animation" id="Animation_ftin5"]
resource_name = "start"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dcga0"]
_data = {
"RESET": SubResource("Animation_a8dvv"),
"start": SubResource("Animation_ftin5")
}

[node name="Player" type="CharacterBody2D"]
position = Vector2(320, 160)
collision_layer = 2
script = ExtResource("1_tuer7")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("1_vv11l")
texture = ExtResource("2_ygmqi")
hframes = 10
vframes = 10
frame = 12

[node name="Foot" type="CollisionShape2D" parent="."]
position = Vector2(4, 24.75)
shape = SubResource("RectangleShape2D_x0fsm")

[node name="PlayerAction" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6daon")
}

[node name="HurtBox" parent="." instance=ExtResource("3_bh7an")]
material = SubResource("ShaderMaterial_3mygs")
position = Vector2(5, 4)
collision_layer = 16
collision_mask = 8200

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_ttjog")

[node name="AttackTimer" type="Timer" parent="."]

[node name="BlinkEffectAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dcga0")
}

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="HurtBox"]
